--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+/* Estilos propios */
+h1{
+  text-align: center;
+  color:aquamarine;
+}
+.centrar-elementos{
+  display:block;
+  margin: auto;
+  text-align: center;
+  
+}
+.texto{
+  font-size:2.5em;
+  color:white;
+}
+.resultado{
+  font-size: 1.5em;
+  font-weight: bold;
+  color:chartreuse;
+}
+
+body{
+  background-image: url("./assets/imgs/bg2.jpg");
+}
+
+input[type="text"]{
+  width: 50%;
+  padding: 10px;
+  margin: 15px;
+}
